--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!--<link rel="icon" type="image/x-icon" href="/src/img/favicon.ico" />-->
+        <link rel="icon" href="data:,"/>
         <title>hueyond.run</title>
     </head>
     <body>
