--- a/localhostDev/index.html
+++ b/localhostDev/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="icon" href="data:,"/>
+        <script>
+            window._isSPA = true
+        </script>
     </head>
     <body>
         <div id="app"><!-- inject --></div>
