--- a/localhostDev/index.html
+++ b/localhostDev/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="icon" href="data:,"/>
-        <script>
-            window._isSPA = true
-        </script>
-    </head>
-    <body>
-        <div id="app"><!-- inject --></div>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="data:," />
+    <script>
+      window._isSPA = true;
+    </script>
+  </head>
+  <body>
+    <div id="app"><!-- inject --></div>
+  </body>
 </html>
